add ssd flag for setting ssd defaults

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -95,3 +95,13 @@
     state: directory
   with_items: '{{ disk_additional_disks }}'
   tags: ['disk']
+
+- include: ssd.yml block={{item}}
+  with_items: 
+    - sda
+    - sdb
+  tags: ['disk']
+
+- include: ssd.yml block={{item.disk|regex_replace('/dev/(.*)', '\\1')}}
+  with_items: '{{ disk_additional_disks }}'
+  tags: ['disk']
