use default scheduler on ssd
noop is no longer valid, and default appears to be quite good

--- a/tasks/ssd.yml
+++ b/tasks/ssd.yml
@@ -1,9 +1,9 @@
-- name: enable noop schedule on ssd disks
-  shell: echo noop > /sys/block/{{block}}/queue/scheduler
-  args:
-    executable: /bin/bash
-  when: item.ssd|d(ssd)|d(false)
-  notify: touch /var/lock/subsys/local
+# - name: enable noop schedule on ssd disks
+#   shell: echo noop > /sys/block/{{block}}/queue/scheduler
+#   args:
+#     executable: /bin/bash
+#   when: item.ssd|d(ssd)|d(false)
+#   notify: touch /var/lock/subsys/local
   
 - name: tell CentOS that disk is ssd
   shell: echo 0 > /sys/class/block/{{block}}/queue/rotational
